--- a/public/produtos.html
+++ b/public/produtos.html
@@ -1,105 +1,229 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
-    <style>
-        /* Estilos CSS */
-        
-        .produto-card {
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 200px;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cardápio</title>
+  <style>
+    body {
+      background: #D1D0A3;
+      font-family: 'Inter', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+    }
 
-        .produto-card img {
-            max-width: 100%;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
+    .container {
+      width: 100%;
+      max-width: 1200px;
+      padding: 20px;
+    }
 
-        .produto-nome {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
 
-        .produto-valor {
-            color: #666;
-        }
-    </style>
+   
+    .card {
+      background: #fff;
+      border: 2px solid #EBF8B8;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      margin: 10px;
+      padding: 20px;
+      width: 23%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .card img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+
+    .titulo {
+      margin-bottom: 20px;
+      text-align: center;
+      color: #fff;
+      font-size: 40px;
+    }
+
+    .card h2 {
+      margin: 10px 0;
+      font-size: 1.5em;
+      text-align: center;
+    }
+
+    .card p {
+      margin: 5px 0;
+      text-align: center;
+    }
+
+    .card .info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    .card .info .valor {
+      font-weight: bold;
+      font-size: 1.2em;
+    }
+
+    .card .info .quantidade-container {
+      display: flex;
+      align-items: center;
+    }
+
+    .quantidade-input {
+      width: 50px;
+      margin-left: 10px;
+      padding: 5px;
+      text-align: center;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      padding: 10px;
+      background-color: #4357AD;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: 600;
+      margin-top: 10px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    button:hover {
+      background-color: #8390FA;
+    }
+
+    .comprar-btn {
+      background-color: #28a745;
+      color: white;
+    }
+
+    .comprar-btn:hover {
+      background-color: #218838;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h2 class="titulo">Cardápio</h2>
+    <div id="cardapio-container" class="row">
+      <!-- Os itens do cardápio serão carregados aqui -->
+    </div>
+  </div>
 
-<div id="produtos-container">
-    <!-- Os cards dos produtos serão adicionados aqui dinamicamente -->
-</div>
-
-<script>
-    // Função para carregar os dados dos produtos do JSON
-    async function carregarProdutos() {
-        try {
-            const response = await fetch('produtos.json');
-            const data = await response.json();
-            return data.produtos;
-        } catch (error) {
-            console.error('Erro ao carregar os produtos:', error);
-            return [];
-        }
+  <script>
+    function carregarCardapio() {
+      fetch('cardapio.json')
+        .then(response => response.json())
+        .then(cardapio => exibirCardapio(cardapio))
+        .catch(error => console.error('Erro ao carregar o cardápio:', error));
     }
 
-    // Função para adicionar produto ao carrinho
-    function adicionarAoCarrinho(nome, valor) {
-        // Aqui você pode enviar o nome e o valor do produto para o servidor
-        alert(`Produto "${nome}" adicionado ao carrinho!`);
-    }
+    function exibirCardapio(cardapio) {
+      const container = document.getElementById('cardapio-container');
 
-    // Função para criar o card de produto
-    function criarProdutoCard(produto) {
-        const container = document.getElementById('produtos-container');
-
-        const card = document.createElement('div');
-        card.classList.add('produto-card');
-
-        const imagem = document.createElement('img');
-        imagem.src = produto.imagem;
-        imagem.alt = produto.nome;
-
-        const nome = document.createElement('p');
-        nome.classList.add('produto-nome');
-        nome.textContent = produto.nome;
-
-        const valor = document.createElement('p');
-        valor.classList.add('produto-valor');
-        valor.textContent = `R$ ${produto.valor.toFixed(2)}`;
-
-        const botao = document.createElement('button');
-        botao.textContent = 'Adicionar ao carrinho';
-        botao.addEventListener('click', () => {
-            adicionarAoCarrinho(produto.nome, produto.valor);
-        });
-
-        card.appendChild(imagem);
-        card.appendChild(nome);
-        card.appendChild(valor);
-        card.appendChild(botao);
-
+      cardapio.cardapio.pizzas.forEach(item => {
+        const card = criarCard(item);
         container.appendChild(card);
+      });
+
+      cardapio.cardapio.massas.forEach(item => {
+        const card = criarCard(item);
+        container.appendChild(card);
+      });
+
+      cardapio.cardapio.risotos.forEach(item => {
+        const card = criarCard(item);
+        container.appendChild(card);
+      });
+
+      cardapio.cardapio.sobremesas.forEach(item => {
+        const card = criarCard(item);
+        container.appendChild(card);
+      });
     }
 
-    // Carregar os produtos e criar os cards quando a página carregar
-    window.addEventListener('load', async () => {
-        const produtos = await carregarProdutos();
-        produtos.forEach(produto => {
-            criarProdutoCard(produto);
-        });
-    });
-</script>
+    function criarCard(item) {
+      const card = document.createElement('div');
+      card.classList.add('card');
 
+      const nome = document.createElement('h2');
+      nome.textContent = item.nome;
+
+      const ingredientes = document.createElement('p');
+      ingredientes.textContent = 'Ingredientes: ' + item.ingredientes.join(', ');
+
+      const imagem = document.createElement('img');
+      imagem.src = item.imagem;
+      imagem.alt = item.nome;
+
+      const info = document.createElement('div');
+      info.classList.add('info');
+
+      const valor = document.createElement('p');
+      valor.classList.add('valor');
+      valor.textContent = 'R$ ' + item.valor.toFixed(2);
+
+      const quantidadeContainer = document.createElement('div');
+      quantidadeContainer.classList.add('quantidade-container');
+
+      const quantidadeLabel = document.createElement('label');
+      quantidadeLabel.textContent = 'Qtd:';
+      quantidadeLabel.setAttribute('for', 'quantidade-' + item.nome);
+
+      const quantidadeInput = document.createElement('input');
+      quantidadeInput.type = 'number';
+      quantidadeInput.id = 'quantidade-' + item.nome;
+      quantidadeInput.min = 1;
+      quantidadeInput.value = 1;
+      quantidadeInput.classList.add('quantidade-input');
+
+      quantidadeContainer.appendChild(quantidadeLabel);
+      quantidadeContainer.appendChild(quantidadeInput);
+
+      info.appendChild(valor);
+      info.appendChild(quantidadeContainer);
+
+      const comprarBtn = document.createElement('button');
+      comprarBtn.textContent = 'Comprar';
+      comprarBtn.classList.add('comprar-btn');
+      comprarBtn.onclick = () => adicionarAoCarrinho(item, quantidadeInput.value);
+
+      // Endpoint para adicionar produtos ao carrinho e redirecionar para a página de cálculo
+    function adicionarAoCarrinho(item, quantidade) {
+    console.log(`Adicionado ao carrinho: ${item.nome}, Quantidade: ${quantidade}`);
+    window.location.href = '/calculo.html'; // Redireciona para a página de cálculo
+  }
+
+      card.appendChild(nome);
+      card.appendChild(ingredientes);
+      card.appendChild(imagem);
+      card.appendChild(info);
+      card.appendChild(comprarBtn);
+
+      return card;
+    }
+
+    window.onload = function() {
+      carregarCardapio();
+    };
+  </script>
 </body>
 </html>
