--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
 <title>Login</title>
 <style>
    body {
-    background: #FAC748;
+    background: #d1d0a3;
     font-family: 'Inter', sans-serif;
     display: flex;
     justify-content: center;
@@ -50,7 +50,7 @@ input[type="password"] {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #4357AD;
+    background-color: #28a745;
     color: white;
     border: none;
     border-radius: 5px;
@@ -59,7 +59,7 @@ button {
 }
 
 button:hover {
-    background-color: #8390FA;
+    background-color: #218838;
 }
 </style>
 </head>
