--- a/public/sucesso.html
+++ b/public/sucesso.html
@@ -12,7 +12,7 @@
         align-items: center;
         height: 100vh;
         margin: 0;
-        background-color: #FAC748;
+        background-color: #D1D0A3;
     }
 
     .container {
@@ -25,7 +25,7 @@
 
     button {
         padding: 10px 20px;
-        background-color: #4357AD;
+        background-color: #28a745;
         color: white;
         border: none;
         border-radius: 5px;
@@ -34,7 +34,7 @@
     }
 
     button:hover {
-        background-color: #8390FA;
+        background-color: #218838;
     }
 </style>
 </head>
