--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -9,7 +9,7 @@
 <title>Cadastro</title>
 <style>
     body {
-    background: #FAC748;
+    background: #D1D0A3;
     font-family: 'Inter', sans-serif;
     display: flex;
     justify-content: center;
@@ -52,7 +52,7 @@ input[type="password"] {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #4357AD;
+    background-color: #28a745;
     color: white;
     border: none;
     border-radius: 5px;
@@ -61,7 +61,7 @@ button {
 }
 
 button:hover {
-    background-color: #8390FA;
+    background-color: #218838;
 }
 </style>
 </head>
