--- a/public/calculo.html
+++ b/public/calculo.html
@@ -121,8 +121,8 @@
             <!-- Os produtos selecionados serão exibidos aqui -->
         </div>
 
-        <label for="caixinha">Valor da Caixinha:</label>
-        <input type="number" id="caixinha" step="0.01" placeholder="Digite o valor da caixinha">
+        <label for="caixinha">Gostaria de dar uma gorjeta?</label>
+        <input type="number" id="caixinha" step="0.01" placeholder="Digite o valor">
 
         <div id="resultado">
             <!-- O resultado do cálculo será exibido aqui -->
