--- a/public/calculo.html
+++ b/public/calculo.html
@@ -111,6 +111,9 @@
             top: 5px;
             right: 5px;
         }
+        #caixinha{
+            width: 200px;
+        }
     </style>
 </head>
 <body>
@@ -121,7 +124,7 @@
             <!-- Os produtos selecionados serão exibidos aqui -->
         </div>
 
-        <label for="caixinha">Gostaria de dar uma gorjeta?</label>
+        <label for="caixinha">Gostaria de dar uma gorjeta?</label><br>
         <input type="number" id="caixinha" step="0.01" placeholder="Digite o valor">
 
         <div id="resultado">
