--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
 form {
     width: 300px;
     padding: 20px;
-    border: 1px solid #1d2f6f; /* Alteração da cor das bordas */
+    border: none; /* Alteração da cor das bordas */
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     background: #ffff;
